them file dinh_danh.dart mau + sua lai workflow cho func AI ho tro ra de